--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><script src="/github-portfolio/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=github-portfolio/livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
@@ -9,16 +9,16 @@
 <meta name="keywords" content="">
 <meta name="description" content="Beni Young Data Analyst Profile">
 <meta name="author" content="Me">
-<link rel="canonical" href="//localhost:1313/github-portfolio/404.html">
-<link crossorigin="anonymous" href="/github-portfolio/assets/css/stylesheet.a1d65e7187b66b8aac6f5e88b7f1fae212bea352228a94a518ee2188ff8aa078.css" integrity="sha256-odZecYe2a4qsb16It/H64hK&#43;o1IiipSlGO4hiP&#43;KoHg=" rel="preload stylesheet" as="style">
-<link rel="icon" href="//localhost:1313/github-portfolio/%3Clink%20/%20abs%20url%3E">
-<link rel="icon" type="image/png" sizes="16x16" href="//localhost:1313/github-portfolio/%3Clink%20/%20abs%20url%3E">
-<link rel="icon" type="image/png" sizes="32x32" href="//localhost:1313/github-portfolio/%3Clink%20/%20abs%20url%3E">
-<link rel="apple-touch-icon" href="//localhost:1313/github-portfolio/%3Clink%20/%20abs%20url%3E">
-<link rel="mask-icon" href="//localhost:1313/github-portfolio/%3Clink%20/%20abs%20url%3E">
+<link rel="canonical" href="//localhost:1313/404.html">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.a1d65e7187b66b8aac6f5e88b7f1fae212bea352228a94a518ee2188ff8aa078.css" integrity="sha256-odZecYe2a4qsb16It/H64hK&#43;o1IiipSlGO4hiP&#43;KoHg=" rel="preload stylesheet" as="style">
+<link rel="icon" href="//localhost:1313/%3Clink%20/%20abs%20url%3E">
+<link rel="icon" type="image/png" sizes="16x16" href="//localhost:1313/%3Clink%20/%20abs%20url%3E">
+<link rel="icon" type="image/png" sizes="32x32" href="//localhost:1313/%3Clink%20/%20abs%20url%3E">
+<link rel="apple-touch-icon" href="//localhost:1313/%3Clink%20/%20abs%20url%3E">
+<link rel="mask-icon" href="//localhost:1313/%3Clink%20/%20abs%20url%3E">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="//localhost:1313/github-portfolio/404.html">
+<link rel="alternate" hreflang="en" href="//localhost:1313/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -58,12 +58,12 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Beni Young Data Analyst Profile" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="//localhost:1313/github-portfolio/404.html" />
-<meta property="og:image" content="//localhost:1313/github-portfolio/static/images/5095904.jpg" />
+<meta property="og:url" content="//localhost:1313/404.html" />
+<meta property="og:image" content="//localhost:1313/static/images/5095904.jpg" />
 <meta property="og:site_name" content="Beni Young Profile" />
 
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="//localhost:1313/github-portfolio/static/images/5095904.jpg" />
+<meta name="twitter:image" content="//localhost:1313/static/images/5095904.jpg" />
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Beni Young Data Analyst Profile"/>
 
@@ -84,7 +84,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="//localhost:1313/github-portfolio/" accesskey="h" title="andronicus.cc (Alt + H)">
+            <a href="//localhost:1313/" accesskey="h" title="andronicus.cc (Alt + H)">
                 <img src="//localhost:1313/apple-touch-icon.png" alt="" aria-label="logo"
                     height="35">andronicus.cc</a>
             <div class="logo-switches">
@@ -112,12 +112,12 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="//localhost:1313/github-portfolio/post/" title="Post">
+                <a href="//localhost:1313/post/" title="Post">
                     <span>Post</span>
                 </a>
             </li>
             <li>
-                <a href="//localhost:1313/github-portfolio/archives/" title="Archives">
+                <a href="//localhost:1313/archives/" title="Archives">
                     <span>Archives</span>
                 </a>
             </li>
@@ -151,7 +151,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2024 <a href="//localhost:1313/github-portfolio/">Beni Young Profile</a></span> · 
+        <span>&copy; 2024 <a href="//localhost:1313/">Beni Young Profile</a></span> · 
 
     <span>
         Powered by
