--- a/public/404.html
+++ b/public/404.html
@@ -9,16 +9,16 @@
 <meta name="keywords" content="">
 <meta name="description" content="Beni Young Data Analyst Profile">
 <meta name="author" content="Me">
-<link rel="canonical" href="//localhost:1313/404.html">
+<link rel="canonical" href="http://localhost:1313/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.864415fa68d3f7afd0d6c9b757f320bfbc503ef19c55c3e61b5f61f35987b682.css" integrity="sha256-hkQV&#43;mjT96/Q1sm3V/Mgv7xQPvGcVcPmG19h81mHtoI=" rel="preload stylesheet" as="style">
-<link rel="icon" href="//localhost:1313/%3Clink%20/%20abs%20url%3E">
-<link rel="icon" type="image/png" sizes="16x16" href="//localhost:1313/%3Clink%20/%20abs%20url%3E">
-<link rel="icon" type="image/png" sizes="32x32" href="//localhost:1313/%3Clink%20/%20abs%20url%3E">
-<link rel="apple-touch-icon" href="//localhost:1313/%3Clink%20/%20abs%20url%3E">
-<link rel="mask-icon" href="//localhost:1313/%3Clink%20/%20abs%20url%3E">
+<link rel="icon" href="http://localhost:1313/%3Clink%20/%20abs%20url%3E">
+<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/%3Clink%20/%20abs%20url%3E">
+<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/%3Clink%20/%20abs%20url%3E">
+<link rel="apple-touch-icon" href="http://localhost:1313/%3Clink%20/%20abs%20url%3E">
+<link rel="mask-icon" href="http://localhost:1313/%3Clink%20/%20abs%20url%3E">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="//localhost:1313/404.html">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -58,12 +58,12 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Beni Young Data Analyst Profile" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="//localhost:1313/404.html" />
-<meta property="og:image" content="//localhost:1313/static/images/5095904.jpg" />
+<meta property="og:url" content="http://localhost:1313/404.html" />
+<meta property="og:image" content="http://localhost:1313/static/images/5095904.jpg" />
 <meta property="og:site_name" content="Beni Young Profile" />
 
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="//localhost:1313/static/images/5095904.jpg" />
+<meta name="twitter:image" content="http://localhost:1313/static/images/5095904.jpg" />
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Beni Young Data Analyst Profile"/>
 
@@ -84,8 +84,8 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="//localhost:1313/" accesskey="h" title="andronicus.cc (Alt + H)">
-                <img src="//localhost:1313/apple-touch-icon.png" alt="" aria-label="logo"
+            <a href="http://localhost:1313/" accesskey="h" title="andronicus.cc (Alt + H)">
+                <img src="http://localhost:1313/apple-touch-icon.png" alt="" aria-label="logo"
                     height="35">andronicus.cc</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
@@ -112,17 +112,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="//localhost:1313/resume/" title="Resume">
+                <a href="http://localhost:1313/resume/" title="Resume">
                     <span>Resume</span>
                 </a>
             </li>
             <li>
-                <a href="//localhost:1313/post/" title="Post">
+                <a href="http://localhost:1313/post/" title="Post">
                     <span>Post</span>
                 </a>
             </li>
             <li>
-                <a href="//localhost:1313/archives/" title="Archives">
+                <a href="http://localhost:1313/archives/" title="Archives">
                     <span>Archives</span>
                 </a>
             </li>
@@ -156,7 +156,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2024 <a href="//localhost:1313/">Beni Young Profile</a></span> · 
+        <span>&copy; 2024 <a href="http://localhost:1313/">Beni Young Profile</a></span> · 
 
     <span>
         Powered by
