--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Beni Young&#39;s Resume">
 <meta name="author" content="Me">
 <link rel="canonical" href="http://localhost:1313/resume/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.864415fa68d3f7afd0d6c9b757f320bfbc503ef19c55c3e61b5f61f35987b682.css" integrity="sha256-hkQV&#43;mjT96/Q1sm3V/Mgv7xQPvGcVcPmG19h81mHtoI=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.83149db0d6fbafb771adc11e76afa182921268ae110ad3fa95a7e3e5116e1082.css" integrity="sha256-gxSdsNb7r7dxrcEedq&#43;hgpISaK4RCtP6lafj5RFuEII=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/%3Clink%20/%20abs%20url%3E">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/%3Clink%20/%20abs%20url%3E">
 <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/%3Clink%20/%20abs%20url%3E">
